tests/e2e/not_allowed/name3.error
Error: syntax error in story at line 1, column 13

1|    function foo/
                  ^

E0041: `/` is not allowed here
