tests/e2e/not_allowed/name3.story
function foo/
    foobar = 1
